--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -888,3 +888,13 @@ background-color: white;
   --bs-form-invalid-color: #dc3545;
   --bs-form-invalid-border-color: #dc3545;
 }
+
+
+
+
+
+
+.content strong{
+  color: white;
+  font-weight: 700;
+}
