--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@ img, svg {
 /* Search Input */
 
 #search .search-elements .form-control {
-  border: 1px solid #4c515e;
+  border: 1px solid #b1b1cd;
   background-color: transparent;
   color: #fff;
   padding: 0.8rem 1.2rem;
@@ -160,9 +160,9 @@ img, svg {
 
 
   /* make it glow! */
-  -webkit-box-shadow: 0px 0px 4px #41fc95;
-     -moz-box-shadow: 0px 0px 4px #41fc95;
-          box-shadow: 0px 0px 4px #41fc95; 
+  -webkit-box-shadow: 0px 0px 4px #4b4bfb;
+     -moz-box-shadow: 0px 0px 4px #4b4bfb;
+          box-shadow: 0px 0px 4px #4b4bfb; 
 }
 
 button, input, optgroup, select, textarea {
@@ -736,17 +736,17 @@ background-color: white;
     --primary-bg: #7b51d4;
     --primary-text: #bb9bff;
     --primary-active-bg: #363247;
-    --down-tone: #1b1c23;
+    --down-tone: #0c0c13;
     --down-tone-2: rgba(0,0,0,.4);
     --high-tone: #23262d;
     --high-tone-nature: hsla(0,0%,100%,.1);
     --secondary-bg: #40424a;
-    --border-color: #2b2e36;
+    --border-color: #b1b1cd;
     --border-color-high: #40434e;
-    --bg-header: #2b2e36;
+    --bg-header: #08080d;
     --bg-dropdown: rgba(16,17,21,.8);
     --bg-blur: rgba(16,17,21,.6);
-    --bg-body: #1e2027;
+    --bg-body: #101019;
     --bg-modal: #3f2b68;
     --text-base: #999;
     --button-mask: rgba(20,20,26,.8);
